<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    tools:context=".CreateCocktail">
    
    <ImageButton
        android:id="@+id/img_btn"
        android:layout_width="216dp"
        android:layout_height="204dp"
        android:padding="24dp"
        android:backgroundTint="@color/light_gray"
        android:src="@drawable/frame__1_"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/title_tv"/>

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintStart_toStartOf="@id/cocktail_name_et"
        app:layout_constraintTop_toTopOf="@id/cocktail_name_et"
        app:layout_constraintBottom_toTopOf="@id/cocktail_name_et"
        android:layout_marginStart="16dp"
        android:paddingBottom="12dp"/>

    <EditText
        android:id="@+id/cocktail_name_et"
        android:hint="@string/cocktail_name"
        android:textAlignment="textStart"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintTop_toBottomOf="@id/img_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/description_tv"/>

    <TextView
        android:id="@+id/description_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@id/cocktail_description_et"
        app:layout_constraintTop_toTopOf="@id/cocktail_description_et"
        app:layout_constraintBottom_toTopOf="@id/cocktail_description_et"
        android:layout_marginStart="16dp"
        android:paddingBottom="12dp"/>

    <EditText
        android:id="@+id/cocktail_description_et"
        android:hint="@string/to_make_this_homemade"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:gravity="top"
        android:background="@drawable/edit_text_border"
        app:layout_constraintTop_toBottomOf="@id/cocktail_name_et"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/recipe_tv"/>

    <TextView
        android:id="@+id/recipe_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipe"
        app:layout_constraintStart_toStartOf="@id/cocktail_recipe_et"
        app:layout_constraintTop_toTopOf="@id/cocktail_recipe_et"
        app:layout_constraintBottom_toTopOf="@id/cocktail_recipe_et"
        android:layout_marginStart="16dp"
        android:paddingBottom="12dp"/>

    <EditText
        android:id="@+id/cocktail_recipe_et"
        android:hint="@string/simply_combine_all_the_ingredients"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintTop_toBottomOf="@id/cocktail_description_et"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/save_btn"/>

    <Button
        android:id="@+id/save_btn"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/cocktail_recipe_et"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cancel_btn"/>

    <Button
        android:id="@+id/cancel_btn"
        android:text="@string/cancel"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/save_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>